# osEtudes

./: .gitignore  README.md
BirneOS/: Makefile  boot.asm  message.txt  run.sh
BirneOS/src/: config.h  kernel.asm  kernel.c  kernel.h  linker.ld  status.h
BirneOS/src/boot/: boot.asm
BirneOS/src/idt/: idt.asm  idt.c  idt.h
BirneOS/src/io/: io.asm
algorithms/lambda_calculus/: lambda.py
algorithms/math/: bisection.jl  eulers_method.jl  newton_raphson.jl
algorithms/math/integration/: midpoint.jl
algorithms/math/interpolation/: newton.jl
algorithms/search/binary_search/: binary_search.c  run.sh
algorithms/sort/quick_sort/: quick_sort.c  run.sh
algorithms/sort/selection_sort/: run.sh  selection_sort.c
algorithms/tsunami_simulation/: Makefile
algorithms/tsunami_simulation/src/: mod_diff.f90  mod_initial.f90  plot.py  tsunami.f90
algorithms/turing_machine/: turing_machine_adder.py  turing_machine_base.py
dataStructures/atoms/: atom.c  atom.h  main.c  run.sh
dataStructures/bst/: bst.c  bst.h  main.c  run.sh
dataStructures/dynamic_array/: darray.c  darray.h  main.c  run.sh
dataStructures/hash_tables/: main.c  run.sh  table.c  table.h
dataStructures/linked_list/: list.c  list.h  run.sh
dataStructures/queue/: main.c  queue.c  queue.h  run.sh
dataStructures/sets/: main.c  run.sh  set.c  set.h
dataStructures/stack/: main.c  run.sh  stack.c  stack.h
gameDev/: README.md
gameDev/2DGameEngine/: CMakeLists.txt  run.sh
gameDev/2DGameEngine/src/: main.cpp
gameDev/2DGameEngine/src/engine/: Game.cpp  Game.h  includes.h
gameDev/3DEngine/: run.sh
gameDev/luaCintegration/: Makefile
gameDev/luaCintegration/scripts/: player_movement.lua
gameDev/luaCintegration/src/: main.c
graphics/RayCastingEngine/: CMakeLists.txt  README.md  run.sh
graphics/RayCastingEngine/src/: main.c
graphics/RayCastingEngine/src/engine/: constants.h  debug.h  engine.c  engine.h
graphics/RayCastingEngine/src/engine/enemy/: enemy.h
graphics/RayCastingEngine/src/engine/map/: map.c  map.h
graphics/RayCastingEngine/src/engine/player/: player.c  player.h
graphics/RayCastingEngine/src/engine/ray/: ray.c  ray.h
languageDev/: README.MD
languageDev/01_CustomLanguageTranspiler/: Generator.rb  Nodes.rb  Parser.rb  README.md  Tokenizer.rb  main.rb  test.src
languageDev/02_RecursiveDescentParser/: README.md  example.txt
languageDev/02_RecursiveDescentParser/src/: Factories.js  Parser.js  Spec.js  Tokenizer.js
languageDev/02_RecursiveDescentParser/tests/: assignment_test.js  block_test.js  control_test.js  empty_test.js  equality_test.js  literal_test.js  logical_test.js  math_test.js  member_test.js  relational_test.js  run.js  statement_list_test.js  unary_test.js  variable_test.js  while_test.js
languageDev/03_MonkeyLang/: go.mod
languageDev/04_EvaLangInterpreter/: README.md  test.eva
languageDev/04_EvaLangInterpreter/src/: Environment.js  Eva.js  Transformer.js
languageDev/04_EvaLangInterpreter/tests/: run.js
languageDev/05_EvaLangVM/: CMakeLists.txt  README.md  example.code  run.sh
languageDev/05_EvaLangVM/src/: includes.h  main.cpp
languageDev/05_EvaLangVM/src/bytecode/: OpCode.h
languageDev/05_EvaLangVM/src/compiler/: EvaCompiler.cpp  EvaCompiler.h  Scope.cpp  Scope.h
languageDev/05_EvaLangVM/src/disassembler/: EvaDisassembler.cpp  EvaDisassembler.h
languageDev/05_EvaLangVM/src/logger/: Logger.h
languageDev/05_EvaLangVM/src/parser/: EvaParser.h  grammar.bnf
languageDev/05_EvaLangVM/src/vm/: EvaCollector.cpp  EvaCollector.h  EvaVM.cpp  EvaVM.h  EvaValue.h  Global.cpp  Global.h
languageDev/06_EvaLangTypeChecker/src/: EvaTC.rb  Type.rb  TypeEnvironment.rb
languageDev/07_EvaLLVM/: main.cpp  out.ll  run.sh
languageDev/08_LoxLanguage/: .project  README.md
languageDev/09_LoxLanguageCompiler/: CMakeLists.txt  run.sh
languageDev/09_LoxLanguageCompiler/src/: bitfield.c  chunk.c  compiler.c  debug.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
languageDev/09_LoxLanguageCompiler/src/headers/: bitfield.h  chunk.h  common.h  compiler.h  debug.h  endian.h  memory.h  object.h  scanner.h  settings.h  table.h  value.h  vm.h
ml/computerVision/: README.md
operatingSystems/BirneOS/: .gitignore  Makefile  README.MD
shell/: README.md
shell/src/: main.rb
software/malloc/: malloc.c  run.sh
(+64 files in other folders)
